--- a/getgrib/NAMESPACE
+++ b/getgrib/NAMESPACE
@@ -3,6 +3,7 @@
 export(
    "gribdata2raster",
    "deaccumulate",
+   "rbind",
    "getdata",
    "grib_ls",
    "getnearest",
@@ -11,9 +12,11 @@ export(
 )
 
 # - Methods for sybase object
-    S3method("is_regular_ll_grid",  "gribdata")
-    S3method("get_grid_increments", "gribdata")
-    S3method("gribdata2raster",     "gribdata")
-    S3method("deaccumulate",        "gribdata")
+   S3method("is_regular_ll_grid",  "gribdata")
+   S3method("get_grid_increments", "gribdata")
+   S3method("gribdata2raster",     "gribdata")
+   S3method("deaccumulate",        "gribdata")
+   S3method("rbind",               "gribdata") 
+   #S3method("cbind",               "default" ) 
 
 
