--- a/getgrib/DESCRIPTION
+++ b/getgrib/DESCRIPTION
@@ -7,4 +7,5 @@ Author: Reto Stauffer
 Maintainer: Reto Stauffer <reto.stauffer@uibk.ac.at>
 Description: Getting nearest neighbor values of a grib file. Other functions have been added to read grib file information.
 Depends: R (>= 3.0.0), raster, sp
+Suggetsts: zoo
 License: GPL-3
