--- a/getgrib/DESCRIPTION
+++ b/getgrib/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: getgrib
 Type: Package
-Title: Getting Nearest Neighbors of a Grib(1) File Via GribAPI/Fortran
-Version: 1.2-9
-Date: 2018-07-18
+Title: Getting Nearest Neighbors of a Grib(1) File Via ecCodes Library
+Version: 2.0-1
+Date: 2018-11-15
 Author: Reto Stauffer
 Maintainer: Reto Stauffer <reto.stauffer@uibk.ac.at>
-Description: Getting nearest neighbor values of a grib file. Other functions have been added to read grib file information.
-Depends: R (>= 3.0.0), raster, sp
+Description: Some grib file handling functions using the ECMWF ecCodes grib handling library.
+Depends: R (>= 3.3.0), raster, sp
 Suggetsts: zoo
-License: GPL-3
+License: GPL-2
